fix table overflow

--- a/src/styles/ProductsCount.css
+++ b/src/styles/ProductsCount.css
@@ -4,3 +4,7 @@
     justify-content: center;
     align-items: baseline;
 }
+
+.table-history-products{
+    overflow-x: auto;
+}
